attempting to fix radio buttons not showing

--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -81,3 +81,6 @@ button{
 #radioBtns label{
     margin-right: 5px;
 }
+input[type='radio']{
+    -webkit-appearance: radio;
+}
